form justify-content is solved by wrapping via another div

--- a/styles/form.css
+++ b/styles/form.css
@@ -17,3 +17,8 @@ form {
     gap: 20px;
     width: 50%;
 }
+
+.form {
+    display: flex;
+    justify-content: center;
+}
